<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_tests</name>
  <version>0.1.0</version>
  <description>ROS2 tests for turtlebot3</description>
  <license>TODO</license>
  <maintainer email="ducanh.than@rapyuta-robotics.com">Duc Than</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>launch_testing</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>nav2_common</build_depend>
  <build_depend>nav2_simple_commander</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_testing</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_type>ament_python</build_type>
  </export>
</package>
